--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,16 +4,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <LinearLayout
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:weightSum="1"
+        android:gravity="center"
+        android:background="@drawable/light_blue_bg">
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:weightSum="2"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10sp"
+            android:background="@drawable/white_circle_bg">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/top_half_circle"
+                android:orientation="vertical"
+                android:gravity="bottom">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Tiempo"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/timer_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textColor="@android:color/holo_red_light"
+                    android:textStyle="bold"
+                    android:text="00:00:00"
+                    android:textAlignment="center"
+                    android:paddingBottom="10dp"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/start_timer_btn"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="Iniciar"
+                android:textSize="20sp"
+                android:textAllCaps="false"
+                android:layout_weight="1"
+                android:paddingBottom="20sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/bottom_half_circle"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
