--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,55 +2,58 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="220dp"
         android:layout_height="220dp"
+        android:background="@drawable/light_blue_bg"
+        android:gravity="center"
         android:orientation="vertical"
+        android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:weightSum="1"
-        android:gravity="center"
-        android:background="@drawable/light_blue_bg">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:weightSum="2"
+            android:background="@drawable/white_circle_bg"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="10sp"
-            android:background="@drawable/white_circle_bg">
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@drawable/top_half_circle"
-                android:orientation="vertical"
-                android:gravity="bottom">
+                android:gravity="bottom"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
                     android:text="Tiempo"
+                    android:textAlignment="center"
                     android:textColor="@android:color/black"
-                    android:textAlignment="center"/>
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/timer_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textColor="@android:color/holo_red_light"
-                    android:textStyle="bold"
+                    android:paddingBottom="10dp"
                     android:text="00:00:00"
                     android:textAlignment="center"
-                    android:paddingBottom="10dp"/>
+                    android:textColor="@android:color/holo_red_light"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -58,18 +61,43 @@
                 android:id="@+id/start_timer_btn"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:text="Iniciar"
-                android:textSize="20sp"
-                android:textAllCaps="false"
                 android:layout_weight="1"
+                android:background="@drawable/bottom_half_circle"
                 android:paddingBottom="20sp"
+                android:text="Iniciar"
+                android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                android:background="@drawable/bottom_half_circle"/>
+                android:textSize="20sp" />
 
 
         </LinearLayout>
 
     </LinearLayout>
 
+    <com.appTec.RegistrateApp.view.activities.generic.CurveBgRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="60dp"
+        android:background="#2a84fe"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.kizitonwose.calendarview.CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cv_dayViewResource="@layout/calendar_day_layout"
+            app:cv_monthHeaderResource="@layout/calendar_month_layout"
+            app:cv_hasBoundaries="true"
+            app:cv_inDateStyle="allMonths"
+            app:cv_maxRowCount="1"
+            app:cv_orientation="horizontal"
+            app:cv_outDateStyle="endOfRow"
+            app:cv_scrollMode="paged" />
+
+    </com.appTec.RegistrateApp.view.activities.generic.CurveBgRelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
