--- a/app/src/main/res/layout/device_element.xml
+++ b/app/src/main/res/layout/device_element.xml
@@ -5,98 +5,98 @@
     android:id="@+id/device_element"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtDeviceName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Equipo 1"
-        tools:ignore="MissingConstraints"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/nunito_bold"
+        android:textColor="@color/black100"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblModel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Modelo:"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="102dp" />
+            android:text="Modelo: "
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/txtDeviceModel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Huawei"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="130dp"
-            tools:layout_editor_absoluteY="102dp" />
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblDeviceImei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Modelo:"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="102dp" />
+            android:text="IMEI: "
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp"/>
 
         <TextView
             android:id="@+id/txtDeviceImei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Huawei"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="130dp"
-            tools:layout_editor_absoluteY="102dp" />
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/lblDeviceStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estado: "
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="135dp" />
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/txtDeviceStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Habilitado"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="131dp"
-            tools:layout_editor_absoluteY="135dp" />
+            android:fontFamily="@font/opensans_light"
+            android:textColor="@color/black100"
+            android:textSize="15dp" />
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
