--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#1E88E5</color>
-
     <color name="black100">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
