--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/btnUpdatePermissions"
         android:icon="@drawable/ic_refresh"
-        android:title="Actualizar"
+        android:title="actualizar"
         app:showAsAction="always" />
 
 </menu>
