--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,14 @@
     android:background="@android:color/white"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <Button
+        android:id="@+id/open_map"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Mapa"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="220dp"
@@ -98,6 +106,26 @@
             app:cv_outDateStyle="endOfRow"
             app:cv_scrollMode="paged" />
 
+
     </com.appTec.RegistrateApp.view.activities.generic.CurveBgRelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/map_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+        <fragment
+            class="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <Button
+            android:id="@+id/close_map"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Cerrar"/>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
