--- a/app/src/main/res/layout/dialog_device.xml
+++ b/app/src/main/res/layout/dialog_device.xml
@@ -27,7 +27,7 @@
         android:id="@+id/txtDeviceModel"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Descripción"
+        android:hint="Modelo"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"></EditText>
 
