--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,16 +52,17 @@
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/timer_text"
+                <Chronometer
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/timer"
                     android:paddingBottom="10dp"
                     android:text="00:00:00"
                     android:textAlignment="center"
                     android:textColor="@android:color/holo_red_light"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    />
 
             </LinearLayout>
 
@@ -85,7 +86,7 @@
     <com.appTec.RegistrateApp.view.activities.generic.CurveBgRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="10dp"
         android:background="#2a84fe"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
