--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
         android:id="@+id/open_map"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:visibility="invisible"
         android:text="Mapa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -77,8 +78,6 @@
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
-
-
         </LinearLayout>
 
     </LinearLayout>
