Changes to splashscreen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black100">#000000</color>
     <color name="gray">#babdbe</color>
     <color name="white">#FFFFFF</color>
+    <color name="darkBlue">#0C1C33</color>
 </resources>
