--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
+    android:background="@color/darkBlue"
     android:orientation="vertical"
     tools:context=".view.SplashActivity"
     android:layout_centerHorizontal="true"
@@ -12,20 +12,11 @@
     android:gravity="center_vertical|center_horizontal|center">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/icon"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/nunito_bold"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="30dp" />
 
 </LinearLayout>
