--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -15,44 +15,6 @@
         android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/textview_rounded"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-
-            <EditText
-                android:id="@+id/txtAssistanceSelectedDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:clickable="true"
-                android:drawableStart="@drawable/ic_calendar"
-                android:drawablePadding="10dp"
-                android:focusable="false"
-                android:fontFamily="@font/opensans_light"
-                android:hint="Fecha seleccionada"
-                android:inputType="date"
-                android:textSize="17dp" />
-
-
-            <ImageButton
-                android:id="@+id/imgBtnSearchAssistance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/rounded_button"
-                android:src="@drawable/ic_search" />
-
-        </LinearLayout>
-
-
     </LinearLayout>
 
     <TextView
@@ -64,7 +26,7 @@
         android:lines="2"
         android:minLines="2"
         android:singleLine="false"
-        android:text="No se ha encontrado asistencias en la fecha seleccionada"
+        android:text="@string/empty_notifications_message"
         android:fontFamily="@font/opensans_light"
         android:textColor="@color/black100"
         android:textSize="15dp"/>
