--- a/app/src/main/res/layout/notifications_card_view.xml
+++ b/app/src/main/res/layout/notifications_card_view.xml
@@ -1,3 +1,4 @@
+<!-- Card view of a notification -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
