--- a/app/src/main/res/layout/notifications_card_view.xml
+++ b/app/src/main/res/layout/notifications_card_view.xml
@@ -1,22 +1,72 @@
 <!-- Card view of a notification -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-     android:layout_height="wrap_content"
-     android:layout_width="match_parent">
-
-    <!-- CardView -->
-    <android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_gravity="center"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    card_view:cardCornerRadius="4dp">
-
-    <TextView
-    android:id="@+id/info_text"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:id="@+id/notification_card_view"
+    android:padding="4dp"
+    >
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Título: "
+
+                />
+
+            <TextView
+                android:id="@+id/notification_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lorem Ipsum "
+
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fecha de envío: "
+
+                />
+
+            <TextView
+                android:id="@+id/notification_sent_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="06/04/2020"
+
+                />
+
+
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
+
+
+
+</androidx.cardview.widget.CardView>
