--- a/app/src/main/res/layout/notifications_fragment_notification.xml
+++ b/app/src/main/res/layout/notifications_fragment_notification.xml
@@ -1,54 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Fragment to show notifications -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent">
 
-
-
-
-
-
-    <TextView
-        android:id="@+id/notification_no_notifications_found"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:gravity="center"
-        android:lines="2"
-        android:minLines="2"
-        android:singleLine="false"
-        android:text="@string/empty_notifications_message"
-        android:fontFamily="@font/opensans_light"
-        android:textColor="@color/black100"
-        android:textSize="15sp"
-        android:visibility="invisible"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/notification_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <include layout="@layout/notifications_card_view"/>
-
-    </android.support.v7.widget.RecyclerView>
-  <!--  <ListView
+    <ListView
+        android:id="@+id/notification_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
-
-    </ListView>-->
-
-
-</LinearLayout>
+</RelativeLayout>
