--- a/app/src/main/res/layout/notifications_fragment_notification.xml
+++ b/app/src/main/res/layout/notifications_fragment_notification.xml
@@ -13,6 +13,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
+    <TextView
+        android:id="@+id/notification_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        ></TextView>
 
 </RelativeLayout>
