Refactored view elements

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@android:color/white">
 
-<!--    <Button-->
-<!--        android:id="@+id/open_map"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:visibility="invisible"-->
-<!--        android:text="Mapa"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+    <!--    <Button-->
+    <!--        android:id="@+id/open_map"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="40dp"-->
+    <!--        android:visibility="invisible"-->
+    <!--        android:text="Mapa"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -48,22 +48,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Tiempo"
+                    android:layout_marginBottom="15dp"
+                    android:text="@string/home_text_view_start_message"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
-                    android:textSize="20sp" />
+                    android:textSize="25sp"
+                    android:fontFamily="@font/nunito_bold"/>
 
-                <Chronometer
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/timer"
-                    android:paddingBottom="10dp"
-                    android:text="00:00:00"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    />
 
             </LinearLayout>
 
@@ -74,7 +65,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bottom_half_circle"
                 android:paddingBottom="20sp"
-                android:text="Iniciar"
+                android:text="@string/home_button_start_message"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
@@ -98,10 +89,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cv_dayViewResource="@layout/calendar_day_layout"
-            app:cv_monthHeaderResource="@layout/calendar_month_layout"
             app:cv_hasBoundaries="true"
             app:cv_inDateStyle="allMonths"
             app:cv_maxRowCount="1"
+            app:cv_monthHeaderResource="@layout/calendar_month_layout"
             app:cv_orientation="horizontal"
             app:cv_outDateStyle="endOfRow"
             app:cv_scrollMode="paged" />
@@ -109,23 +100,23 @@
 
     </com.appTec.RegistrateApp.view.activities.generic.CurveBgRelativeLayout>
 
-<!--    <RelativeLayout-->
-<!--        android:id="@+id/map_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:visibility="invisible">-->
-<!--        <fragment-->
-<!--            class="com.google.android.gms.maps.MapFragment"-->
-<!--            android:id="@+id/map"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"/>-->
+    <!--    <RelativeLayout-->
+    <!--        android:id="@+id/map_layout"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:visibility="invisible">-->
+    <!--        <fragment-->
+    <!--            class="com.google.android.gms.maps.MapFragment"-->
+    <!--            android:id="@+id/map"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"/>-->
 
-<!--        <Button-->
-<!--            android:id="@+id/close_map"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="40dp"-->
-<!--            android:text="Cerrar"/>-->
+    <!--        <Button-->
+    <!--            android:id="@+id/close_map"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="40dp"-->
+    <!--            android:text="Cerrar"/>-->
 
-<!--    </RelativeLayout>-->
+    <!--    </RelativeLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
