--- a/app/src/main/res/layout/notifications_fragment_notification.xml
+++ b/app/src/main/res/layout/notifications_fragment_notification.xml
@@ -11,17 +11,14 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/notification_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="No hay nuevas notificaciones"
-        android:visibility="visible"
+        android:visibility="gone"
         ></TextView>
 
 </RelativeLayout>
