--- a/app/src/main/res/drawable-mdpi/splash.xml
+++ b/app/src/main/res/drawable-mdpi/splash.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:opacity="opaque">
     <!-- The background color, preferably the same as your normal theme -->
     <item android:drawable="@color/darkBlue" />
