Fixed the login activity and added a new one

--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -17,7 +17,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/app_bar"/>
+        <include layout="@layout/app_bar_main"/>
 
         <!--
 
