--- a/app/src/main/res/layout/principal_activity.xml
+++ b/app/src/main/res/layout/principal_activity.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/nav_host_fragment_2"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?android:attr/actionBarSize"
         android:layout_marginBottom="?android:attr/actionBarSize"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintBottom_toTopOf="@id/bottom_view_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
